infra/k8s/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: justjio-ingress-nginx-controller-deployment
  namespace: justjio
  labels:
    app.kubernetes.io/name: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
    spec:
      containers:
        - name: controller
          image: registry.k8s.io/ingress-nginx/controller:v1.8.1
          args:
            - /nginx-ingress-controller
            - --http-port=6000
            - --https-port=6443
            - --election-id=ingress-nginx-leader
            - --ingress-class=nginx
          ports:
            - name: http
              containerPort: 6080
            - name: https
              containerPort: 6443
