infra/k8s/ingress/ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: justjio-ingress-nginx-controller
  namespace: justjio
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 6080 # External port clients connect to
      targetPort: 6080 # Matches containerPort
      protocol: TCP
    - name: https
      port: 6443
      targetPort: 6443
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
