infra/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: justjio
  name: justjio-ingress
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "justjio-ws-service"
spec:
  ingressClassName: nginx
  rules:
    - host: justjio-api.rowentey.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: justjio-api-service
                port:
                  number: 8080
    - host: justjio-ws.rowentey.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: justjio-ws-service
                port:
                  number: 8081
